--- a/Paper/relatedwork.bib
+++ b/Paper/relatedwork.bib
@@ -38,3 +38,63 @@ volume = {12},
 number = {2},
 }
 
+@inproceedings{Laura,
+author = {Laura Moreno and Gabriele Bavota and Massimiliano Di Penta and Rocco Oliveto and Andrian Marcus and Gerardo Canfora},
+title = {Automatic Generation of Release Notes},
+date = {Nov. 2014},
+}
+
+@INPROCEEDINGS{Cruzes, 
+author={Cruzes, D.S. and Dyba, Tore}, 
+booktitle={Empirical Software Engineering and Measurement (ESEM), 2011 International Symposium on}, 
+title={Recommended Steps for Thematic Synthesis in Software Engineering}, 
+year={2011}, 
+month={Sept}, 
+pages={275-284}, 
+keywords={research and development;software engineering;qualitative research;software engineering;systematic reviews;thematic synthesis;Context;Data mining;Encoding;Organizations;Software;Software engineering;Systematics;evidence-based and empirical software engineering;research synthesis;secondary research;systematic review}, 
+doi={10.1109/ESEM.2011.36}, 
+ISSN={1938-6451},}
+
+@inproceedings{Antoiol,
+ author = {Antoniol, Giuliano and Ayari, Kamel and Di Penta, Massimiliano and Khomh, Foutse and Gu{\'e}h{\'e}neuc, Yann-Ga\"{e}l},
+ title = {Is It a Bug or an Enhancement?: A Text-based Approach to Classify Change Requests},
+ booktitle = {Proceedings of the 2008 Conference of the Center for Advanced Studies on Collaborative Research: Meeting of Minds},
+ series = {CASCON '08},
+ year = {2008},
+ location = {Ontario, Canada},
+ pages = {23:304--23:318},
+ articleno = {23},
+ numpages = {15},
+ url = {http://doi.acm.org/10.1145/1463788.1463819},
+ doi = {10.1145/1463788.1463819},
+ acmid = {1463819},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@inproceedings{HerzigMis,
+ author = {Herzig, Kim and Just, Sascha and Zeller, Andreas},
+ title = {It\&\#039;s Not a Bug, It\&\#039;s a Feature: How Misclassification Impacts Bug Prediction},
+ booktitle = {Proceedings of the 2013 International Conference on Software Engineering},
+ series = {ICSE '13},
+ year = {2013},
+ isbn = {978-1-4673-3076-3},
+ location = {San Francisco, CA, USA},
+ pages = {392--401},
+ numpages = {10},
+ url = {http://dl.acm.org/citation.cfm?id=2486788.2486840},
+ acmid = {2486840},
+ publisher = {IEEE Press},
+ address = {Piscataway, NJ, USA},
+} 
+
+@INPROCEEDINGS{HerzigData, 
+author={Fischer, M. and Pinzger, M. and Gall, H.}, 
+booktitle={Software Maintenance, 2003. ICSM 2003. Proceedings. International Conference on}, 
+title={Populating a Release History Database from version control and bug tracking systems}, 
+year={2003}, 
+month={Sept}, 
+pages={23-32}, 
+keywords={configuration management;database management systems;program debugging;project management;query processing;software maintenance;system monitoring;Mozilla;Release History Database;bug tracking systems;database population;historical information;large open source project;merge points;software evolution;version control;Application software;Computer errors;Control systems;Data engineering;Databases;History;Information analysis;Open source software;Systems engineering and theory;Technological innovation}, 
+doi={10.1109/ICSM.2003.1235403}, 
+ISSN={1063-6773},}
