--- a/Paper/summariesCycles.tex
+++ b/Paper/summariesCycles.tex
@@ -10,4 +10,5 @@
 51.473 & 30.000 & 69.928 & 606.000 \\ 
   43.283 & 22.000 & 64.215 & 442.000 \\ 
   \end{tabular}
+  \label{tab:sumcycles}
 \end{table}
