--- a/Paper/summariesShortCycles.tex
+++ b/Paper/summariesShortCycles.tex
@@ -9,4 +9,5 @@
    \hline
 Desktop Applications & 51.473 & 30.000 & 69.928 & 606.000 \\ 
   \end{tabular}
+  \label{tab:sumshortcycles}
 \end{table}
