--- a/Paper/tablesShortcycle.tex
+++ b/Paper/tablesShortcycle.tex
@@ -10,4 +10,5 @@ Application Comparison & p-value \\
 Mobile vs Desktop & 6.35E-04 \\ 
    \hline
 \end{tabular}
+\label{tab:shortcycles}
 \end{table}
