--- a/Paper/tablesenhancements.tex
+++ b/Paper/tablesenhancements.tex
@@ -12,4 +12,5 @@ Mobile vs Desktop & 1.03E-08 \\
   Sibling vs Desktop & 1.26E-07 \\ 
    \hline
 \end{tabular}
+\label{tab:enhancements}
 \end{table}
