--- a/Paper/tablesmobileMod.tex
+++ b/Paper/tablesmobileMod.tex
@@ -25,4 +25,5 @@ Num. obs.      & 346           \\
 \caption{Statistical models}
 \label{table:coefficients}
 \end{center}
+\label{tab:mobileModel}
 \end{table}
