--- a/Paper/tablessibMod.tex
+++ b/Paper/tablessibMod.tex
@@ -23,6 +23,6 @@ Num. obs.      & 239           \\
 \multicolumn{2}{l}{\scriptsize{$^{***}p<0.001$, $^{**}p<0.01$, $^*p<0.05$}}
 \end{tabular}
 \caption{Statistical models}
-\label{table:coefficients}
+\label{tab:sibModel}
 \end{center}
 \end{table}
